Game library header fix
Game library header used to be shifted down a bit, covering part of the first game in the list. This fixes that.

--- a/black-hole/style.css
+++ b/black-hole/style.css
@@ -646,7 +646,7 @@ a.selected-aXhQR6 .layout-2DM8Md, a.channel-2QD9_O:hover {
 }
 
 .gameLibrary-TTDw4Y>.libraryHeader-3g95kE+div+.scrollerWrap-2lJEkd>.scroller-2FKFPG {
-  margin-top: 47px;
+  margin-top: 0;
 }
 
 .stickyHeader-1pqx0j+.stickyHeader-1pqx0j {
